<resources>
    <string name="app_name">维保</string>
    <string name="view_login">登陆</string>
    <string name="view_index">主页</string>
    <string name="action_settings">设置</string>
    <string name="view_repairapp">维修申请</string>
    <string name="view_scanner">扫描二维码</string>
    <string name="view_repairplan">维保方案</string>
    <string name="view_completedproject">完工工程</string>
    <string name="view_checkproject">工程验收</string>
    <string name="view_examplan">方案审核</string>
    <string name="view_planschedule">施工进度</string>
    <string name="view_updateplanschedule">更新进度</string>
    <string name="view_arealist">社区信息</string>
    <string name="view_detailedarea">社区详情</string>
    <string name="view_about">关于</string>

    <!-- Strings related to activity_login -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_username_should_not_empty">用户名不能为空！</string>
    <string name="error_password_should_not_empty">密码不能为空！</string>
    <string name="should_not_empty">此项不能为空！</string>
    <string name="auto_login">自动登录</string>


    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="MachineCode">设备编号:</string>
    <string name="AppCode">申请单号:</string>
    <string name="right_logo"><![CDATA[<<<<<<]]></string>
    <string name="left_logo"><![CDATA[>>>>>>]]></string>
    <string name="plan_schedule_input_here">进度描述在此输入...</string>
    <string name="submit_schedule">提交进度</string>

    <string-array name="type_name">
        <item>申请类型</item>
        <item>故障类型</item>
        <item>方案类型</item>
        <item>设备类型</item>
        <item>设备状态</item>
        <item>社区类型</item>
        <item>维修申请表状态</item>
    </string-array>

    <string-array name="role_name">
        <item>普通用户</item>
        <item>监管用户</item>
        <item>维保用户</item>
    </string-array>

    <string-array name="system_menus">
        <item>维修申请</item>
        <item>提供方案</item>
        <item>审核方案</item>
        <item>施工进度</item>
        <item>施工验收</item>
        <item>社区信息</item>
        <item>关于</item>
    </string-array>
</resources>
