<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingTop="@dimen/activity_vertical_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="维修申请信息"
                    android:textSize="22sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_plan_schedule_machine_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:text="设备名"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="---->"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/update_plan_schedule_error_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="故障类型"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AppCode"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/update_plan_schedule_app_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="0000000000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/item_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingTop="@dimen/activity_vertical_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="进度描述"
                    android:textSize="22sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/update_plan_schedule_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/plan_schedule_input_here"
                    android:inputType="textMultiLine"
                    android:lines="7"
                    android:maxLines="7"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit_schedule"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/item_background"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_horizontal_padding"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding"
                android:paddingTop="@dimen/activity_vertical_padding">

                <Button
                    android:id="@+id/accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red_dark"
                    android:text="确认完工"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar" />
</FrameLayout>